--- a/src/index.css
+++ b/src/index.css
@@ -136,3 +136,17 @@ footer {
 .button.primary {
   background-color: #f0c040;
 }
+
+/* Filter */
+
+.filter {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  margin: 1;
+  border-bottom: .1rem #c0c0c0 solid;
+}
+
+filter div {
+  flex: 1;
+}
